--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/log.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geranciaodr-LubConsulta</title>
+    <title>Business Intelligence - LUBRAX</title>
   </head>
   <body>
     <div id="app"></div>
